# final-clouds-TOAradiation

./: README.md  pyproject.toml
examples/: grab_t2m.py  list_all_variables.py  location_comparison.py  relationship.py  variable_comparison.py
grab_era5/: core.py  data.py
project/: __init__.py  analysis.py  core.py  example1.py  example2.py  example3.py  location_comparison.py  mapping.py  variable_comparison.py
